--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "bootstrap": "^5.0.2",
+    "css-loader": "^5.2.4",
     "dns-packet": "^5.2.4",
     "mini-css-extract-plugin": "^1.6.0",
-    "css-loader": "^5.2.4",
     "node-sass": "^6.0.0",
-    "postcss-loader": "^5.3.0",
     "postcss": "^8.2.15",
-    "webpack": "^5.37.0",
+    "postcss-loader": "^5.3.0",
     "sass-loader": "^11.1.0",
+    "webpack": "^5.37.0",
     "webpack-dev-server": "^3.11.2"
   },
   "repository": {
