--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "serve": "webpack serve  --mode development"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "autoprefixer": "^10.2.4",
     "bootstrap": "^5.0.2",
     "css-loader": "^5.2.4",
     "dns-packet": "^5.2.4",
+    "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^1.6.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "^6.0.1",
+    "popper.js": "^1.16.1",
     "postcss": "^8.2.15",
     "postcss-loader": "^5.3.0",
     "sass-loader": "^11.1.0",
